Incorrect symbol and empty search

--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,4 +1,4 @@
-<h1>My my_portfolio</h1>
+<h1>My portfolio</h1>
 
 <h3>Search for stocks</h3>
 <div id="stock-lookup">
@@ -17,8 +17,10 @@
   <% end %>
 </div>
 
-<div class="well results-block">
-  <strong>Symbol: </strong><%= @stock.ticker %>
-  <strong>Name: </strong><%= @stock.name %>
-  <strong>Price: </strong><%= @stock.last_price %>
-</div>
+<% if @stock %>
+  <div class="well results-block">
+    <strong>Symbol: </strong><%= @stock.ticker %>
+    <strong>Name: </strong><%= @stock.name %>
+    <strong>Price: </strong><%= @stock.last_price %>
+  </div>
+<% end %>
