--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,21 +1,23 @@
 <% if params[:action] == "search" %>
-  <div class="results-block">
-    <%= bootstrap_flash %>
-  </div>
+    <div class="col-md-3"></div>
+    <div id="alert-search-stocks" class="col-md-6">
+      <%= bootstrap_flash %>
+    </div>
+    <div class="col-md-3"></div>
 <% end %>
 
 <% if @stock %>
-  <div class="well results-block">
+  <div class="col-md-12 well results-block">
     <strong>Symbol: </strong><%= @stock.ticker %>
     <strong>Name: </strong><%= @stock.name %>
     <strong>Price: </strong><%= @stock.last_price %>
     <% if current_user.can_add_stock?(@stock.ticker) %>
-      <%= link_to "Add to my stocks",
+      <%= link_to "Watch this stock",
         user_stocks_path(user: current_user, stock_ticker: @stock.ticker),
-                                class: "btn btn-xs btn-success", method: :post %>
+                                id: "watch-stock-button", class: "link-underline", method: :post %>
     <% else %>
-      <span class="label label-default">
-        Stock cannot be added because you have already added
+      <span style="float:right;" class="label label-default">
+        Already watching
         <% if !current_user.under_stock_limit? %>
           10 stocks
         <% end %>
