--- a/app/views/friends/_lookup.html.erb
+++ b/app/views/friends/_lookup.html.erb
@@ -1,19 +1,26 @@
-<h3>Search for Friends</h3>
-<div id="friend-lookup">
-  <%= form_tag search_friends_path, remote: true, method: :get, id: 'friend-lookup-form' do %>
-    <div class="form-group row no-padding text-center col-md-12">
-      <div class="col-md-10">
-        <%= text_field_tag :search_param, params[:search_param],
-        placeholder: "Enter name or email", autofocus: true,
-        class: "form-control search-box input-lg" %>
-      </div>
-      <div class="col-md-2">
-        <%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
-          🔍 Search
-        <% end %>
-      </div>
+<div class="row">
+  <div class="col-md-3">
+
+  </div>
+  <div class="col-md-6">
+    <div id="friend-lookup">
+      <%= form_tag search_friends_path, remote: true, method: :get, id: 'friend-lookup-form' do %>
+        <div class="form-group row no-padding text-center col-md-12">
+          <div id="friends-lookup-col" class="col-md-10">
+            <%= text_field_tag :search_param, params[:search_param],
+            placeholder: "Enter name or email", autofocus: true,
+            class: "form-control search-box input-lg" %>
+          </div>
+          <div class="col-md-2">
+            <%= button_tag(type: :submit, id: "search-button-friends", class: "btn btn-lg btn-success") do %>
+              Search
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
+
 </div>
 
 <div id="results">
