--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -13,12 +13,12 @@
             <tr>
               <td><strong>Name:</strong> <%= user.full_name %></td>
               <td><strong>Email:</strong> <%= user.email %></td>
-              <td><strong>Profile:</strong> <%= link_to "View Profile", user_path(user),
-                                        class: "btn btn-xs btn-success" %>
+              <td><%= link_to "View", user_path(user),
+                                        class: "link-underline green-link" %>
                 <% if current_user.not_friends_with?(user.id) %>
-                  <%= link_to "Add as my friend",
+                  <%= link_to "Follow",
                           add_friend_path(user: current_user, friend: user),
-                            class: "btn btn-xs btn-success", method: :post %>
+                            class: "link-underline green-link", method: :post %>
                 <% else %>
                   <span class="label label-primary">
                     You are friends
