--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
@@ -30,7 +30,8 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2020</p>
+        <hr>
+        <div><span id="footer-logo">🌎 STOKS TRAKER</span><span id="footer-credits"> by Lois Talagrand</span></div>
       </footer>
 
     </div> <!-- /container -->
