--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -16,10 +16,10 @@
         <td><%= user_stock.ticker %></td>
         <td><%= user_stock.last_price %></td>
         <% if @user.id == current_user.id %>
-          <td><%= link_to "Delete this stock", user_stock_path(user_stock),
+          <td><%= link_to "Delete", user_stock_path(user_stock),
                       method: :delete,
                       data: {confirm: "Are you sure?"},
-                      class: "btn btn-xs btn-danger" %>
+                      class: "link-underline" %>
           </td>
         <% end %>
       </tr>
