--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,4 @@
-<h2>User Details</h2>
-
-<dl class="dl-horizontal">
-  <dt><strong>Full Name</strong></dt>
-  <dd><%= @user.full_name %></dd>
-  <dt><strong>Email</strong></dt>
-  <dd><%= @user.email %></dd>
-</dl>
+<h2><%= @user.full_name %></h2>
 
 <% if @user.stocks.size > 0 %>
   <%= render 'stocks/list' %>
