--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,16 +1,19 @@
+
+
 <div class="navbar navbar-default navbar-static-top">
     <div class="container">
       <a class="navbar-brand" href="/">
         🌎 STOKS TRAKER
       </a>
       <% if current_user %>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-items-links" aria-controls="#nav-items-links" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
 
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <div id="nav-items-links" class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav col-md-6">
             <li><%= link_to "Portfolio", my_portfolio_path  %></li>
             <li><%= link_to "Friends", my_friends_path  %></li>
