--- a/app/views/friends/_lookup.html.erb
+++ b/app/views/friends/_lookup.html.erb
@@ -6,12 +6,12 @@
     <div id="friend-lookup">
       <%= form_tag search_friends_path, remote: true, method: :get, id: 'friend-lookup-form' do %>
         <div class="form-group row no-padding text-center col-md-12">
-          <div id="friends-lookup-col" class="col-md-10">
+          <div id="friends-lookup-col" class="col-sm-10">
             <%= text_field_tag :search_param, params[:search_param],
             placeholder: "Enter name or email", autofocus: true,
             class: "form-control search-box input-lg" %>
           </div>
-          <div class="col-md-2">
+          <div class="col-sm-2">
             <%= button_tag(type: :submit, id: "search-button-friends", class: "btn btn-lg btn-success") do %>
               Search
             <% end %>
