--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -6,22 +6,22 @@
 
 <% if @users %>
   <% if @users.size > 0 %>
-    <div id="friend-lookup-results" class="well results-block col-md-10">
+    <div class="col-md-3"></div>
+    <div id="friend-lookup-results" class="well results-block col-md-6">
       <table class="search-results-table col-md-12">
         <tbody>
           <% @users.each do |user| %>
             <tr>
               <td><strong>Name:</strong> <%= user.full_name %></td>
-              <td><strong>Email:</strong> <%= user.email %></td>
-              <td><%= link_to "View", user_path(user),
+              <td align="right"><%= link_to "View", user_path(user),
                                         class: "link-underline green-link" %>
                 <% if current_user.not_friends_with?(user.id) %>
                   <%= link_to "Follow",
                           add_friend_path(user: current_user, friend: user),
                             class: "link-underline green-link", method: :post %>
                 <% else %>
-                  <span class="label label-primary">
-                    You are friends
+                  <span>
+                    Added
                   </span>
                 <% end %>
               </td>
