--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -32,7 +32,7 @@
   <table>
 <% else %>
   <div class="row col-lg-12">
-    <p class="lead">
+    <p align="center">
       You don't have any friends yet, please add some!
     </p>
   </div>
