--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
 <h2><%= @user.full_name %></h2>
+<p>This user is watching the following stocks:</p>
 
 <% if @user.stocks.size > 0 %>
   <%= render 'stocks/list' %>
 <% else %>
-  <p class="lead">This user is not tracking any stocks</p>
+  <p>This user is not tracking any stocks</p>
 <% end %>
 
 <%= link_to "Back", my_friends_path, class: "btn btn-primary" %>
