--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
           <%= f.label :first_name %>
           <%= f.text_field :first_name, class: 'form-control' %>
         </div>
-        <div class="col-md-6 no-padding left-padding">
+        <div class="col-md-6 last-name">
           <%= f.label :last_name %>
           <%= f.text_field :last_name, class: 'form-control' %>
         </div>
