--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -8,15 +8,16 @@
 
 <% if @stock %>
   <div class="col-md-12 well results-block">
-    <strong>Symbol: </strong><%= @stock.ticker %>
-    <strong>Name: </strong><%= @stock.name %>
-    <strong>Price: </strong><%= @stock.last_price %>
+    <% if !current_user.stock_already_added?(@stock.ticker) && current_user.under_stock_limit? %>
+      <strong>Name: </strong><%= @stock.name %>
+      <strong>Price: </strong><%= @stock.last_price %>
+    <% end %>
     <% if current_user.can_add_stock?(@stock.ticker) %>
-      <%= link_to "Watch this stock",
+      <%= link_to "Watch",
         user_stocks_path(user: current_user, stock_ticker: @stock.ticker),
                                 id: "watch-stock-button", class: "link-underline", method: :post %>
     <% else %>
-      <span style="float:right;" class="label label-default">
+
         Already watching
         <% if !current_user.under_stock_limit? %>
           10 stocks
@@ -24,7 +25,7 @@
         <% if current_user.stock_already_added?(@stock.ticker) %>
           this stock
         <% end %>
-      </span>
+
     <% end %>
   </div>
 <% end %>
